<resources>
    <string name="app_name">Parcial</string>
    <string name="btn_search">Search</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="list_header_res">ListHeaderRes</string>
    <string name="txt_results">ListHeaderResults</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="imagen_explore">imagen_explore</string>
    <string name="perfil">perfil</string>
    <string name="background">background</string>
    <string name="boracay">Boracay</string>
    <string name="philippines">Philippines</string>
    <string name="_349">$349</string>
    <string name="overview">Overview</string>
    <string name="spend_5_days_and_4_nights_in_one_of_the_best_islands_in_the_world_bask_in_the_sun_while_walking_in_the_white_sand_beach_and_enjoy_the_night_partying_at_the_popular_seaside_bars">Spend 5 days and 4 nights in one of the best islands in the world! Bask in the sun while walking in the white sand beach and enjoy the night partying at the popular seaside bars.</string>
    <string name="photo">Photo</string>
    <string name="image_boracay">image_boracay</string>
    <string name="book_now">Book now</string>
    <string name="image_of_paris">Image of Paris</string>
    <string name="plane">plane</string>
    <string name="trending_destinations">Trending Destinations</string>
    <string name="offers">Offers</string>
    <string name="logotype">logotype</string>
    <string name="airline_name">Airline Name</string>
    <string name="clock">clock</string>
    <string name="_1_hr_40_min">1 hr 40 min</string>
    <string name="id">ID</string>
    <string name="airport_name">airport name</string>
    <string name="airplane">Airplane</string>
    <string name="line">line</string>
    <string name="seat_class">Seat Class</string>
    <string name="from">From</string>
    <string name="_1_000">$ 1,000</string>
    <string name="view_details">View Details</string>
    <string name="limited_offer">LIMITED OFFER!</string>
    <string name="get_20_disount_with_your_master_credit_cards">Get 20% disount with your Master credit cards</string>
    <string name="button">button</string>
    <string name="macy_johnson">Macy Johnson</string>
    <string name="baguio_philippines">Baguio, Philippines</string>
    <string name="i_like_the_beach_mountains_forest_and_everything_about_nature">I like the beach, mountains, forest and everything about nature! :)</string>
    <string name="card">card</string>
    <string name="payment_details">Payment details</string>
    <string name="human">human</string>
    <string name="referral_code">Referral code</string>
    <string name="set">set</string>
    <string name="settings">Settings</string>
    <string name="out">out</string>
    <string name="logout">Logout</string>
    <string name="one_way">One way</string>
    <string name="round_trip">Round trip</string>
    <string name="select_departure">Select departure</string>
    <string name="to">To</string>
    <string name="select_arrival">Select arrival</string>
    <string name="depature_date">Depature Date</string>
    <string name="select_date">Select Date</string>
    <string name="search">Search</string>
    <string name="generales">Generales</string>
    <string name="modo_oscuro">Modo Oscuro</string>
    <string name="hello">Hello</string>
    <string name="explore">Explore</string>
    <string name="profile">Profile</string>
    <string name="notification">Notification</string>
    <string name="get_help">Get Help</string>
    <string name="calendar">Calendar</string>
</resources>