<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/navmenuprofile"
        android:title="@string/profile" />
    <item
        android:id="@+id/none1"
        android:icon="@drawable/navmenunotification"
        android:title="@string/notification" />
    <item
        android:id="@+id/none2"
        android:icon="@drawable/navmenugethelp"
        android:title="@string/get_help" />
    <item
        android:id="@+id/none3"
        android:icon="@drawable/navmenucalendar"
        android:title="@string/calendar" />
    <item
        android:id="@+id/settingsFragment"
        android:icon="@drawable/navmenusettings"
        android:title="@string/settings" />
</menu>