<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.explore.BoracayFragment">

    <ImageView
        android:id="@+id/background_image"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:scaleType="centerCrop"
        android:src="@drawable/boracay"
        android:contentDescription="@string/background" />

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/background_image"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="vertical">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/text_boracay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="8dp"
                android:text="@string/boracay"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/code_boracay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="5D4N"
                android:textSize="18sp" />
        </LinearLayout>

            <TextView
                android:id="@+id/text_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
               android:layout_gravity="end"
                android:text="@string/_349"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text_philippines"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/philippines"
                android:textColor="#808080"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/text_overview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/overview"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text_paragraph"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/spend_5_days_and_4_nights_in_one_of_the_best_islands_in_the_world_bask_in_the_sun_while_walking_in_the_white_sand_beach_and_enjoy_the_night_partying_at_the_popular_seaside_bars"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/text_photo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/photo"
                android:textSize="18sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/image1"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginEnd="8dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/borocay1"
                    android:contentDescription="@string/image_boracay" />


                <ImageView
                    android:id="@+id/image2"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginEnd="8dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/borocay2"
                    android:contentDescription="@string/image_boracay" />


                <ImageView
                    android:id="@+id/image3"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/borocay3"
                    android:contentDescription="@string/image_boracay" />
            </LinearLayout>

            <Button
                android:id="@+id/button_book_now"
                android:layout_width="400dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:text="@string/book_now" />
        </LinearLayout>
    </FrameLayout>

</RelativeLayout>
