<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:foregroundTint="#00BCD4"
    tools:context=".ui.search.SearchFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <RadioGroup
                android:id="@+id/radio_group_trip_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radio_button_one_way"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:background="@drawable/radio_button_background"
                    android:buttonTint="@drawable/radio_button_selector"
                    android:padding="8dp"
                    android:text="@string/one_way" />

                <RadioButton
                    android:id="@+id/radio_button_round_trip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/radio_button_background"
                    android:buttonTint="@drawable/radio_button_selector"
                    android:padding="8dp"
                    android:text="@string/round_trip" />

            </RadioGroup>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="4dp"
                android:text="@string/from"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textSalida"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/select_departure">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/takeoff" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="4dp"
                android:text="@string/to"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textLlegada"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/select_arrival">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/landing" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="4dp"
                android:text="@string/depature_date"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutDepartureDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/select_date">

                <EditText
                    android:id="@+id/edit_text_departure_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:clickable="true"
                    android:drawableStart="@drawable/date"
                    android:focusable="false"
                    android:hint="@string/select_date"
                    android:inputType="none" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/spinner_passengers"
                    android:layout_width="3dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <Spinner
                    android:id="@+id/spinner_class"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

            </LinearLayout>

            <Button
                android:id="@+id/button_search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/orange"
                android:text="@string/search"
                app:cornerRadius="0dp" />

            <ViewFlipper
                android:id="@+id/flipperExplore"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:autoStart="true"
                android:flipInterval="2000"
                android:inAnimation="@android:anim/slide_in_left"
                android:orientation="horizontal"
                android:outAnimation="@android:anim/slide_out_right">

                <ImageView
                    android:layout_width="280dp"
                    android:layout_height="150dp"
                    android:layout_gravity="center"
                    android:src="@drawable/offerexplore"
                    android:contentDescription="@string/offers" />

                <ImageView
                    android:layout_width="280dp"
                    android:layout_height="150dp"
                    android:layout_gravity="center"
                    android:src="@drawable/offerexplore1"
                    android:contentDescription="@string/offers" />

            </ViewFlipper>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
